--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="css/text" href="css/index.css">
     <title>Post Here</title>
 </head>
 <body>
     <div class="container">
         <section class="header">
             <nav>
+                <img src="img/Reddit_Lockup_white.png" alt="Reddit Snoo and logo">
                 <h1>Post Here</h1>
                 <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="/about.html">About</a>
                 <a href="#">Sign In</a>
             </nav>
         </section>
+            <h2>lorem ipsum</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam molestiae amet debitis quasi deserunt, dolor atque labore quam nobis inventore ex ut architecto reiciendis blanditiis dolorem minima iure neque iusto.</p>
             <img src="" alt="">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas nulla consequuntur optio facilis quod doloribus! Alias necessitatibus ad debitis, excepturi beatae nobis corrupti veritatis incidunt, neque reprehenderit assumenda perspiciatis voluptas?</p>
@@ -29,6 +32,6 @@
         <footer>
 
         </footer>
-</div> <!--ends container-->
+    </div> <!--ends container-->
 </body>
 </html>
