--- a/index.html
+++ b/index.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="css/text" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    
     <title>Post Here</title>
 </head>
 <body>
     <div class="container">
         <section class="header">
-            <nav>
-                <img src="img/Reddit_Lockup_white.png" alt="Reddit Snoo and logo">
+            
+                <a href="https://www.reddit.com"><img src="img/Reddit_Lockup_white.png" alt="Reddit Snoo and logo"></a>
                 <h1>Post Here</h1>
-                <a href="#">Home</a>
-                <a href="/about.html">About</a>
-                <a href="#">Sign In</a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="signin.html">Sign In</a>
             </nav>
         </section>
-            <h2>lorem ipsum</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam molestiae amet debitis quasi deserunt, dolor atque labore quam nobis inventore ex ut architecto reiciendis blanditiis dolorem minima iure neque iusto.</p>
-            <img src="" alt="">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas nulla consequuntur optio facilis quod doloribus! Alias necessitatibus ad debitis, excepturi beatae nobis corrupti veritatis incidunt, neque reprehenderit assumenda perspiciatis voluptas?</p>
         <section class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam temporibus repellendus facere fugit, saepe totam incidunt earum perspiciatis molestias iste vero voluptatum? Doloribus, porro suscipit harum ea veritatis repellat rem.</p>
-        </section> <!--ends content-->
-        <section class="content2">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam non minima, est labore, fuga inventore suscipit itaque voluptatem nisi deserunt ab iusto libero? Consequatur molestias sunt adipisci voluptates, laborum exercitationem.</p>
+            <div class="hero">
+                <div class="text">
+                    <h2>Are you a lost Redditor?</h2>
+                    <p>With our advanced natural language processing algorithms, we can help you find the perfect place to post your content. Simply enter your desired post into our text field and we will produce a list of subreddits most suited to your content. Start optimizing your internet points today!</p>
+                </div>
+                <img src="img/lostredditor.png" alt="screenshot of reddit submission page">
+            </div>
         </section>
 
         <footer>
+            <p>© Copyright 2019</p>
+            <p>Post Here is not affiliated with Reddit Inc.</p>
+            <nav>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="signin.html">Sign In</a>
+            </nav>
 
         </footer>
     </div> <!--ends container-->
