--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <div class="container">
         <section class="header">
-            
-                <a href="https://www.reddit.com"><img src="img/Reddit_Lockup_white.png" alt="Reddit Snoo and logo"></a>
-                <h1>Post Here</h1>
+            <a href="https://www.reddit.com" class="mobile"><img src="img/Reddit_Mark_OnWhite.png"></a>
+            <a class="logo" href="https://www.reddit.com"><img src="img/Reddit_Lockup_white.png" alt="Reddit Snoo and logo"></a>
+            <h1>Post Here</h1>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="signin.html">Sign In</a>
+                <a href="../front-end/post-here/public/index.html">Sign In</a>
             </nav>
         </section>
         <section class="content">
