linked to signin page added register button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="../front-end/post-here/public/index.html">Sign In</a>
+                <a href="https://post-here.now.sh/login">Sign In</a>
             </nav>
         </section>
         <section class="content">
@@ -27,6 +27,7 @@
                 <div class="text">
                     <h2>Are you a lost Redditor?</h2>
                     <p>With our advanced natural language processing algorithms, we can help you find the perfect place to post your content. Simply enter your desired post into our text field and we will produce a list of subreddits most suited to your content. Start optimizing your internet points today!</p>
+                    <a href="https://post-here.now.sh/registration"><button>Register Now!</button></a>
                 </div>
                 <img src="img/lostredditor.png" alt="screenshot of reddit submission page">
             </div>
@@ -38,7 +39,7 @@
             <nav>
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="signin.html">Sign In</a>
+                    <a href="https://post-here.now.sh/login">Sign In</a>
             </nav>
 
         </footer>
