--- a/about.html
+++ b/about.html
@@ -13,14 +13,13 @@
 <body>
     <div class="container">
         <section class="header">
-            
-                <a class="logo" href="https://www.reddit.com"><img src="img/Reddit_Lockup_white.png" alt="Reddit Snoo and logo"></a>
-                <a href="https://www.reddit.com" class="mobile"><img src="img/Reddit_Mark_OnWhite.png"></a>
-                <h1>Post Here</h1>
+            <a class="logo" href="https://www.reddit.com"><img src="img/Reddit_Lockup_white.png" alt="Reddit Snoo and logo"></a>
+            <a href="https://www.reddit.com" class="mobile"><img src="img/Reddit_Mark_OnWhite.png"></a>
+            <h1>Post Here</h1>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="./front-end/index.html">Sign In</a>
+                <a href="https://post-here.now.sh/login">Sign In</a>
             </nav>
         </section>
             <h2>About Us</h2>
@@ -95,7 +94,7 @@
             <nav>
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="signin.html">Sign In</a>
+                    <a href="https://post-here.now.sh/login">Sign In</a>
             </nav>
         </footer>
 
